fix(frontend): change bottom page padding to margin to avoid unnecessary scrollbar

--- a/frontend/src/components/SourcePage.css
+++ b/frontend/src/components/SourcePage.css
@@ -6,12 +6,12 @@
   user-select: none;
   justify-content: center;
   align-items: center;
-  padding-bottom: 3.245em;
 }
 
 .source-page .lines {
   padding: 1em;
   text-align: justify;
+  margin-bottom: 3.245em;
 }
 
 .source-page .lines .line {
